multi class bcp support

--- a/runs/monoflex.yaml
+++ b/runs/monoflex.yaml
@@ -1,9 +1,9 @@
 DATASETS:
   DETECT_CLASSES: ("Car", "Pedestrian", "Cyclist")
   TRAIN: ("kitti_train",)
-  TEST: ("kitti_test",)
-  TRAIN_SPLIT: "trainval"
-  TEST_SPLIT: "test"
+  TEST: ("kitti_train",)
+  TRAIN_SPLIT: "train"
+  TEST_SPLIT: "val"
 
   USE_RIGHT_IMAGE: False
   CONSIDER_OUTSIDE_OBJS: True
