--- a/runs/monoflex.yaml
+++ b/runs/monoflex.yaml
@@ -6,6 +6,7 @@ DATASETS:
   TEST_SPLIT: "val"
 
   USE_RIGHT_IMAGE: False
+  USE_MIXUP: True
   CONSIDER_OUTSIDE_OBJS: True
   FILTER_ANNO_ENABLE: True
   
@@ -76,7 +77,7 @@ SOLVER:
 
   EVAL_AND_SAVE_EPOCH: True
   EVAL_EPOCH_INTERVAL: 1
-  SAVE_CHECKPOINT_EPOCH_INTERVAL: 2
+  SAVE_CHECKPOINT_EPOCH_INTERVAL: 1
   MAX_EPOCHS: 120
   DECAY_EPOCH_STEPS: [80, 90]
 
@@ -86,6 +87,6 @@ SOLVER:
 TEST:
   UNCERTAINTY_AS_CONFIDENCE: True
   DETECTIONS_THRESHOLD: 0.2
-  METRIC: ['R11']
+  METRIC: ['R11', 'R40']
 
-OUTPUT_DIR: "./checkpoints/TRAIN_NOISE_NO_RIGHT_FLIP_001nd" 
+OUTPUT_DIR: "./checkpoints/MONOFLEX_TEST_17.91_STAGE_002/Trainval_labels_12000+_On_Trainval_001nd" 
