Semi-supervised learing 10 and 30 percentage experients

--- a/runs/monoflex.yaml
+++ b/runs/monoflex.yaml
@@ -6,12 +6,12 @@ DATASETS:
   TEST_SPLIT: "val"
 
   USE_RIGHT_IMAGE: False
-  USE_MIXUP: True
+  # USE_MIXUP: True
   CONSIDER_OUTSIDE_OBJS: True
   FILTER_ANNO_ENABLE: True
 
-  CLS_THRESHOLD: 0.70
-  GEO_CONF_THRESHOLD: 0.65
+  # CLS_THRESHOLD: 0.70
+  # GEO_CONF_THRESHOLD: 0.75
   
 INPUT:
   HEATMAP_CENTER: '3D'
@@ -79,13 +79,13 @@ SOLVER:
   LR_DECAY: 0.1
 
   EVAL_AND_SAVE_EPOCH: True
-  EVAL_EPOCH_INTERVAL: 1
+  EVAL_EPOCH_INTERVAL: 10
   SAVE_CHECKPOINT_EPOCH_INTERVAL: 1
-  MAX_EPOCHS: 120
+  MAX_EPOCHS: 300
   DECAY_EPOCH_STEPS: [80, 90]
 
   IMS_PER_BATCH: 8
-  EVAL_INTERVAL: 1000
+  EVAL_INTERVAL: 2000
 
 TEST:
   UNCERTAINTY_AS_CONFIDENCE: True
